tests/ui/basic/wrong_arg_count.rs
use metamatch::eval;

fn main() {
    eval! {
        fn foo(x) { x }
        foo(1, 2, 3)
    };
}
